--- a/index.html
+++ b/index.html
@@ -68,15 +68,24 @@
         <div class="loading">
             <p>Loading your farming dashboard...</p>
             <p>If this page doesn't redirect automatically, click below:</p>
-            <a href="/CropAI/" class="btn">Launch CropAI Platform</a>
+            <a href="./" class="btn" id="launchBtn">Launch CropAI Platform</a>
         </div>
     </div>
 
     <script>
-        // Redirect to the React app
-        setTimeout(() => {
-            window.location.href = '/CropAI/';
-        }, 2000);
+        // Check if we're already on the root path
+        const currentPath = window.location.pathname;
+        
+        // Only redirect if not already at root
+        if (currentPath !== '/CropAI/' && currentPath !== '/') {
+            window.location.href = '/';
+        }
+        
+        // Handle manual launch button click
+        document.getElementById('launchBtn').addEventListener('click', (e) => {
+            e.preventDefault();
+            window.location.href = '/';
+        });
     </script>
 </body>
 </html>
